# myob

./: docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/: main.py  utils.py
backend/src/routes/: __init__.py
backend/src/routes/auth/: __init__.py
backend/src/services/db/: __init__.py
backend/src/services/db/schemas/: Users.py  Workspace.py  __init__.py
backend/src/services/smtp/: __init__.py
backend/src/services/smtp/templates/: base.html
env/: .env
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/pages/auth/: SignUp.tsx
frontend_old/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend_old/src/: App.tsx  index.css
frontend_old/src/components/: Sidebar.tsx  Toolbar.tsx  mode-toggle.tsx
frontend_old/src/pages/auth/: Login.tsx
tsp_simulation/chip/: README.md
tsp_simulation/chip/src/: KVCache.vhd  ProcessingElement.vhd  SystolicArray.vhd  TransformerAccelerator.vhd
tsp_simulation/chip/tb/: KVCache_tb.vhd  SystolicArray_tb.vhd
tsp_simulation/src/: tsp_top.vhd
tsp_simulation/src/icu/: icu.vhd
tsp_simulation/src/lanes/: lane.vhd
tsp_simulation/src/slices/: mem_slice.vhd  mxm_slice.vhd  sxm_slice.vhd  vxm_slice.vhd
tsp_simulation/tb/: tsp_tb.vhd
